# ProyectoFInal

./: .gitmodules  Instrucciones.txt
cpp/: AndroidUploader.cpp  AndroidUploader.h  C3DRecorder.cpp  C3DRecorder.h  CMakeLists.txt  GestorTelemetria.cpp  GestorTelemetria.h  TelemetriaAPI.cpp  TelemetriaAPI.h  TiposTelemetria.h  TiposVR.h  configReader.cpp  configReader.h
cpp/build-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
